WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204982
[LFC][Integration] Layout test assert and crash fixes
https://bugs.webkit.org/show_bug.cgi?id=204982
Summary
[LFC][Integration] Layout test assert and crash fixes
Antti Koivisto
Reported
2019-12-07 02:59:18 PST
Fixes for common integration related assertion failures with LFC enabled.
Attachments
patch
(7.38 KB, patch)
2019-12-07 03:06 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(7.68 KB, patch)
2019-12-07 03:10 PST
,
Antti Koivisto
zalan
: review+
Details
Formatted Diff
Diff
patch
(7.68 KB, patch)
2019-12-07 05:30 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-12-07 03:06:22 PST
Created
attachment 385089
[details]
patch
Antti Koivisto
Comment 2
2019-12-07 03:10:07 PST
Created
attachment 385090
[details]
patch
alan
Comment 3
2019-12-07 04:39:32 PST
Comment on
attachment 385090
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=385090&action=review
> Source/WebCore/layout/layouttree/LayoutTreeBuilder.cpp:197 > + childLayoutBox = makeUnique<Box>(elementAttributes(renderer), RenderStyle::clone(renderer.style()));
lol
Antti Koivisto
Comment 4
2019-12-07 05:30:26 PST
Created
attachment 385095
[details]
patch
WebKit Commit Bot
Comment 5
2019-12-07 05:56:59 PST
Comment on
attachment 385095
[details]
patch Clearing flags on attachment: 385095 Committed
r253251
: <
https://trac.webkit.org/changeset/253251
>
WebKit Commit Bot
Comment 6
2019-12-07 05:57:00 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-12-07 05:57:19 PST
<
rdar://problem/57727271
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug