Source/WebCore/layout/integration/LayoutIntegrationLineLayout.h
@@ -60,6 +60,8 @@ public:
 
     LayoutUnit contentLogicalHeight() const { return m_contentLogicalHeight; }
     size_t lineCount() const;
+    LayoutUnit firstLineBaseline() const;
+    LayoutUnit lastLineBaseline() const;
 
     const Display::InlineContent* displayInlineContent() const;
 
